--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
-		"supertest": "^3.3.0"
+		"supertest": "^3.3.0",
+		"nodemon": "^1.18.9"
 	}
 }
